# encdec

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: check.yml  release.yml
src/: main.rs
test/: test.sh
