[package]
name = "encdec"
description = "A terminal encryption utility that supports multipart and compression."
version = "0.1.0"
edition = "2021"
authors = ["pouriya.jahanbakhsh@gmail.com"]
repository = "https://github.com/pouriya/encdec"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsa = {version = "0.9.6", features = ["sha2"]}
clap = {version = "4.5.4", features = ["derive"]}
anyhow = "1.0.66"
rand = "0.8.5"
zip = "0.6"

[profile.release]
opt-level = 3
